--- a/Week1/variables&operations.html
+++ b/Week1/variables&operations.html
@@ -11,7 +11,7 @@
         
         <!-- Uncomment the file you are working on -->
 
-        <script src="VariablesAndOperations.js"></script>
+        <script src="variables&operations.js"></script>
         <!-- <script src="ConditionsAndLoops.js"></script> -->
         <!-- <script src="ArraysAndFunctions.js"></script> -->
         <!-- <script src="ArrowFunctionsAndCallbacks.js"></script> -->
