--- a/Week1/week1.html
+++ b/Week1/week1.html
@@ -1,5 +1,5 @@
 <html>
     <head>
-        <script src="week1Assignment.js"></script>
+        <script src="week1lab.js"></script>
     </head>
 </html>
