--- a/Week2/index.html
+++ b/Week2/index.html
@@ -1,5 +1,8 @@
 <html>
     <head>
-    <script src="userinput.js"></script>
+    <!-- <script src="userinput.js"></script> -->
+    <!-- <!script src="loops.js"></script> -->
+    <!-- <!script src="operators&conditionals,js"></script> -->
+    <script src="week2.js"></script>
 </head>
 </html>
