--- a/Week2/index.html
+++ b/Week2/index.html
@@ -3,6 +3,6 @@
     <!-- <script src="userinput.js"></script> -->
     <!-- <!script src="loops.js"></script> -->
     <!-- <!script src="operators&conditionals,js"></script> -->
-    <script src="week2.js"></script>
+    <script src="loops-week2-research.js"></script>
 </head>
 </html>
