--- a/Week2/index.html
+++ b/Week2/index.html
@@ -2,7 +2,7 @@
     <head>
     <!-- <script src="userinput.js"></script> -->
     <!-- <!script src="loops.js"></script> -->
-    <!-- <!script src="operators&conditionals,js"></script> -->
-    <script src="loops-week2-research.js"></script>
+    <script src="operators&conditionals.js"></script>
+    <!--script src="loops-week2-research.js"></script> -->
 </head>
 </html>
