added more code to loops.js

--- a/Week2/index.html
+++ b/Week2/index.html
@@ -4,5 +4,6 @@
     <script src="loops.js"></script>
     <!--script src="operators&conditionals.js"></script> -->
     <!--script src="loops-week2-research.js"></script> -->
+    <!--<script src="week2lab"></script> -->
 </head>
 </html>
