--- a/Week2/index.html
+++ b/Week2/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
     <!-- <script src="userinput.js"></script> -->
-    <!-- <script src="loops.js"></script> -->
+    <script src="loops.js"></script>
     <!--script src="operators&conditionals.js"></script> -->
     <!--script src="loops-week2-research.js"></script> -->
     <!--<script src="week2lab"></script> -->
-    <script src="booleanoperators.js"></script>
+    <!-- <script src="booleanoperators.js"></script> -->
 </head>
 </html>
