--- a/Week3/index.html
+++ b/Week3/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- <script src="arrays.js"></script> -->
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script> -->
+    <script src="arraymethods.js"></script>
 </body>
 </html>
