--- a/Week3/index.html
+++ b/Week3/index.html
@@ -9,6 +9,8 @@
 <body>
     <!-- <script src="arrays.js"></script> -->
     <!-- <script src="functions.js"></script> -->
-    <script src="arraymethods.js"></script>
+    <!-- <script src="arraymethods.js"></script> -->
+    <!-- <script src="objects.js"></script> -->
+    <script src="equality.js"></script>
 </body>
 </html>
