created class.js, codingassignment.js & updated various .js files

--- a/Week3/index.html
+++ b/Week3/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="arraymethods.js"></script> -->
     <!-- <script src="objects.js"></script> -->
-    <script src="equality.js"></script>
+    <!-- <script src="equality.js"></script> -->
+    <script src="codingassignment.js"></script>
 </body>
 </html>
