--- a/Week3/index.html
+++ b/Week3/index.html
@@ -13,5 +13,6 @@
     <!-- <script src="objects.js"></script> -->
     <!-- <script src="equality.js"></script> -->
     <script src="codingassignment.js"></script>
+    <!-- <script src="arber.js"></script> -->
 </body>
 </html>
