addeed ECMAScript.js

--- a/Week4/index.html
+++ b/Week4/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=" "></script>
+    <script src="ECMAScript 6.js"></script>
 </body>
 </html>
