--- a/Week4/index.html
+++ b/Week4/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ECMAScript 6.js"></script>
+    <!-- <script src="ECMAScript 6.js"></script> -->
+    <script src="class.js"></script>
 </body>
 </html>
