--- a/Week5/index.html
+++ b/Week5/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="oop.js"></script>
+    <!-- <script src="oop.js"></script> -->
     <script src="classes.js"></script>
-    <script src="inheritance.js"></script>
+    <!-- <script src="inheritance.js"></script>
     <script src="exceptions.js"></script>
-    <script src="menuapp.js"></script>
+    <script src="menuapp.js"></script> -->
 </body>
 </html>
