updated oop.js file

--- a/Week5/index.html
+++ b/Week5/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="classes.js"></script> -->
     <!-- <script src="inheritance.js"></script> -->
     <!-- <script src="exceptions.js"></script> -->
-    <script src="menuapp.js"></script>
+    <!-- <script src="menuapp.js"></script> -->
+    <script src="week5-codingassignment.js"></script>
 </body>
 </html>
