updated week5 assignment

--- a/Week5/index.html
+++ b/Week5/index.html
@@ -13,5 +13,6 @@
     <!-- <script src="exceptions.js"></script> -->
     <!-- <script src="menuapp.js"></script> -->
     <script src="week5-codingassignment.js"></script>
+    <!-- <script src="glennys.js"></script> -->
 </body>
 </html>
