--- a/Week5/index.html
+++ b/Week5/index.html
@@ -12,7 +12,7 @@
     <!-- <script src="inheritance.js"></script> -->
     <!-- <script src="exceptions.js"></script> -->
     <!-- <script src="menuapp.js"></script> -->
-    <script src="week5-codingassignment.js"></script>
+    <script src="W5-codingassignment.js"></script>
     <!-- <script src="glennys.js"></script> -->
 </body>
 </html>
