updated week6 files

--- a/Week6/index.html
+++ b/Week6/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="W6-codingassignment.js"></script>
+    <!-- <script src="W6-codingassignment.js"></script> -->
+    <script src="debugging.js"></script>
 </body>
 </html>
