updated week6 files

--- a/Week6/index.html
+++ b/Week6/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- <script src="W6-codingassignment.js"></script> -->
     <!-- <script src="debugging.js"></script> -->
-    <script src="unittests.js"></script>
+    <!-- <script src="unittests.js"></script> -->
+    <script src="warcardgame.js"></script>
 </body>
 </html>
