--- a/Week2/index.html
+++ b/Week2/index.html
@@ -1,10 +1,17 @@
-<html>
-    <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <!-- <script src="userinput.js"></script> -->
     <script src="loops.js"></script>
     <!--script src="operators&conditionals.js"></script> -->
     <!--script src="loops-week2-research.js"></script> -->
     <!--<script src="week2lab"></script> -->
     <!-- <script src="booleanoperators.js"></script> -->
-</head>
+</body>
 </html>
