--- a/Week3/index.html
+++ b/Week3/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <!-- <script src="arrays.js"></script> -->
-    <!-- <script src="functions.js"></script> -->
+    <script src="functions.js"></script>
     <!-- <script src="arraymethods.js"></script> -->
     <!-- <script src="objects.js"></script> -->
     <!-- <script src="equality.js"></script> -->
-    <script src="W3-codingassignment.js"></script>
+    <!-- <script src="W3-codingassignment.js"></script> -->
     <!-- <script src="arber.js"></script> -->
 </body>
 </html>
