--- a/Week6/index.html
+++ b/Week6/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="W6-codingassignment.js"></script> -->
+    <script src="W6-codingassignment.js"></script>
     <!-- <script src="debugging.js"></script> -->
     <!-- <script src="unittests.js"></script> -->
-    <script src="warcardgame.js"></script>
+    <!-- <script src="warcardgame.js"></script> -->
 </body>
 </html>
