--- a/Week6/index.html
+++ b/Week6/index.html
@@ -11,7 +11,8 @@
     <script src="W6-CA2.js"></script>
     <script src="WCG1.js"></script>
     <script src="WCG2.js"></script> -->
-    <script src="leah.js"></script>
+    <script src="WCG3.js"></script>
+    <!-- <script src="leah.js"></script> -->
     <!-- <script src="debugging.js"></script> -->
     <!-- <script src="unittests.js"></script> -->
 </body>
