--- a/Week6/index.html
+++ b/Week6/index.html
@@ -7,13 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="W6-CA1.js"></script>
-    <script src="W6-CA2.js"></script>
+    <!-- <script src="W6-CA1.js"></script> -->
     <script src="WCG1.js"></script>
-    <script src="WCG2.js"></script> -->
-    <script src="WCG3.js"></script>
-    <!-- <script src="leah.js"></script> -->
     <!-- <script src="debugging.js"></script> -->
     <!-- <script src="unittests.js"></script> -->
+    <!-- <script src="leah.js"></script> -->
 </body>
 </html>
