created WCG2.js & updated files

--- a/Week6/index.html
+++ b/Week6/index.html
@@ -10,7 +10,8 @@
     <!-- <script src="W6-CA1.js"></script> -->
     <!-- <script src="W6-CA2.js"></script> -->
     <!-- <script src="WCG0.js"></script> -->
-    <script src="WCG1.js"></script>
+    <!-- <script src="WCG1.js"></script> -->
+    <script src="WCG2.js"></script>
     <!-- <script src="debugging.js"></script> -->
     <!-- <script src="unittests.js"></script> -->
     <!-- <script src="leah.js"></script> -->
