--- a/Week6/tests.html
+++ b/Week6/tests.html
@@ -13,6 +13,7 @@
     <div id="fixtures"></div>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/chai/chai.js"></script>
+    <script src ="WCG2.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="unittests.js"></script>
     <script>mocha.run();</script>
