--- a/Week7/W7 Project/pictures.html
+++ b/Week7/W7 Project/pictures.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="EPK1.jpg"/> <!--This is a relative path-->
-    <img src="https://storage.googleapis.com/wzukusers/user-34854977/images/5ceb7c1d80eeaKM3iEdm/aDSC_3192.jpg">/> <!--This is an absolute path-->
+    <img src="https://storage.googleapis.com/wzukusers/user-34854977/images/5ceb7c1d80eeaKM3iEdm/aDSC_3192.jpg"/> <!--This is an absolute path-->
 </body>
 </html>
