finished/updated week 7 assignment

--- a/Week7/W7 Project/index.html
+++ b/Week7/W7 Project/index.html
@@ -4,70 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 7 Class Project</title>
+    <title>FEUDALE</title>
 </head>
 <body>
-    <!-- HTML is the structore of the website. -->
-    <!-- Block Elements -->
 
-    <p><h1> Hello World! </h1></p>
-    <h2>How are you?</h2>
-    
-    <p> I am very hungry!</p>
-    <ul>
-
-    <li>This is an unordered list</li>
-    <li>So is this<li>
-
-    </ul>
-
-    <ol>
-
-        <li>Now this is an ordered list</li>
-        <li>So is this!</li>
-
-    </ol>
-
-    <h3>Needed for assignment:</h3>
-
-    <ol>
-
-        <li>At least 3 pages</li>
-        <li>Links to navigate website</li>
-        <li>3 images</li>
-        <li>2 different headers</li>
-        <li>A table</li>
-        <li>A form</li>        
-
-    </ol>
-
-       <!-- Inline Elements -->
-
-       <span>I'm inline,</span>
-       <span> Me too!</span>
-   
-       <!-- Use href's to link all pages in this weeks assignment. -->
-       <!-- "./" is used to go back to the previous directoy. -->
+    <h1>Home</h1>
 
     <div>
-
-        <br>
-
-        <a href="https://google.com">Let's do a google search!</a>
-        <br>
-        <br>
-        <a href="pictures.html">Pictures</a>
-        <br>
-        <br>
-        <a href="about.html">About</a>
-        <br>
-        <br>
-        <a href="./index.html"> Go back</a> <!--This is an example how to go back a directory-->
-        <br>
-        <br>
-        <a href="Week7/index.html">Week 7</a>
-
+        <a href="index.html">Home</a><br>
+        <a href="pictures.html">Pictures</a><br>
+        <a href="about.html">About us</a><br>
+        <a href="contact.html">Contact Us</a>
     </div>
 
+    <p><b>EXPERIENCE FEUDALE<br><br>
+    FEUDALE is a hard-rocking, blues inspired band, with a twist of alternative flare.</b></p>
+    <br>
+    <img height="600px" width="750px" src="./Images/Feudale-3.png" alt="Feudale Stick-figures">
+    
 </body>
 </html>
