--- a/Week7/W7 Project/pictures.html
+++ b/Week7/W7 Project/pictures.html
@@ -7,7 +7,14 @@
     <title>Pictures</title>
 </head>
 <body>
-    <img src="EPK1.jpg"/> <!--This is a relative path-->
-    <img src="https://storage.googleapis.com/wzukusers/user-34854977/images/5ceb7c1d80eeaKM3iEdm/aDSC_3192.jpg"/> <!--This is an absolute path-->
+    <h1>Pictures</h1>
+    <div>
+        <a href="index.html">Home</a><br>
+        <a href="about.html">About us</a><br>
+        <a href="contact.html">Contact Us</a>
+    </div>
+    <br>
+    <img height="500" width="600" src="./Images/EPK1.jpg"/><br> <!--This is a relative path-->
+    <img height="500" width="600" src="https://storage.googleapis.com/wzukusers/user-34854977/images/5ceb7c1d80eeaKM3iEdm/aDSC_3192.jpg"/> <!--This is an absolute path-->
 </body>
 </html>
