updated week8 files

--- a/Week8/index.html
+++ b/Week8/index.html
@@ -43,6 +43,9 @@
     </style> -->
 </head>
 <body>
+
+<!--The box modle for HTML elements consist of: padding, border & margin. These layers allow us to design pages with spacing between elemnts to make a more pleasing interface-->
+
     <div class="hov"></div> <!--This is an example of using id's to apply css-->
     <ul class="every-even">
         <li>One</li>
