--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="styles.css"> <!--This is an external css link to a style sheet-->
 </head>
 <body>
     <h1>Contact Us</h1>
@@ -25,7 +26,7 @@
         <input type="submit" value="Submit"><br>
     </form>
     <br>
-    <table>
+    <table class="table">
         <tr>
             <th>Website</th>
             <th>Link</th>
