--- a/Week8/W8 Project/index.html
+++ b/Week8/W8 Project/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Home</h1>
 
-    <div class="">
+    <div id="box-model">
         <a href="index.html">Home</a><br>
         <a href="pictures.html">Pictures</a><br>
         <a href="about.html">About us</a><br>
