--- a/Week8/W8 Project/pictures.html
+++ b/Week8/W8 Project/pictures.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pictures</title>
+    <link rel="stylesheet" href="styles.css"> <!--This is an external css link to a style sheet-->
 </head>
 <body>
     <h1>Pictures</h1>
