updated week8 files

--- a/Week8/W8 Project/about.html
+++ b/Week8/W8 Project/about.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <h1>About Us</h1>
-    <div>
-        <a href="index.html">Home</a><br>
-        <a href="pictures.html">Pictures</a><br>
-        <a href="contact.html">Contact Us</a><br>
+    <div id="box-model">
+        <a href="index.html">Home</a>
+        <a href="pictures.html">Pictures</a>
+        <a href="contact.html">Contact Us</a>
     </div>
     <br>
     <img height="500px" src="./Images/FEUDALE_edit2.png" alt="A picture of FEUDALE">
