--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <h1>Contact Us</h1>
-    <div>
-        <a href="index.html">Home</a><br>
-        <a href="pictures.html">Pictures</a><br>
-        <a href="about.html">About us</a><br>
+    <div id="box-model">
+        <a href="index.html">Home</a>
+        <a href="pictures.html">Pictures</a>
+        <a href="about.html">About us</a>
     </div>
     <br>
 
