--- a/Week8/W8 Project/index.html
+++ b/Week8/W8 Project/index.html
@@ -11,9 +11,9 @@
     <h1>Home</h1>
 
     <div id="box-model">
-        <a href="index.html">Home</a><br>
-        <a href="pictures.html">Pictures</a><br>
-        <a href="about.html">About us</a><br>
+        <a href="index.html">Home</a>
+        <a href="pictures.html">Pictures</a>
+        <a href="about.html">About us</a>
         <a href="contact.html">Contact Us</a>
     </div>
     <br>
