--- a/Week8/W8 Project/pictures.html
+++ b/Week8/W8 Project/pictures.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Pictures</h1>
-    <div>
-        <a href="index.html">Home</a><br>
-        <a href="about.html">About us</a><br>
+    <div id="box-model">
+        <a href="index.html">Home</a>
+        <a href="about.html">About us</a>
         <a href="contact.html">Contact Us</a>
     </div>
     <br>
