updated 'contact us' page

--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -31,20 +31,32 @@
             <th>Website</th>
             <th>Link</th>
         </tr>
-        <tr>
         <ul>
+        <tr>
             <td><li>Facebook</li></td>
-            <td><a href="https://www.facebook.com/feudalerockband"/>Vist our Facebook</td>
+            <td><a href="https://www.facebook.com/feudalerockband"/>
+            <img height="50px" width="50px" src="./Images/facebook_logo.png"/>
+            </td>
         </tr>
         <tr>
             <td><li>Instagram</li></td>
-            <td><a href="https://www.instagram.com/feudalerockband"/> Visit our Instagram</td>
+            <td><a href="https://www.instagram.com/feudalerockband"/>
+            <img height="50px" width="50px" src="./Images/instagram_logo.png"/>
+            </td>
         </tr>
         <tr>
             <td><li>Twitter</li></td>
-            <td><a href="https://www.twitter.com/feudalerockband"/> Visit our Twitter</td>
-        </ul>
+            <td><a href="https://www.twitter.com/feudalerockband"/>
+            <img height="50px" width="50px" src="./Images/facebook_logo.png"/>
+            </td>
+        </tr>    
+        <tr>
+            <td><li>YouTube</li></td>
+            <td><a href="https://www.youtube.com/feudalerockband"/>
+            <img height="50px" width="50px" src="./Images/youtube_logo.png"/>
+            </td>
         </tr>
+        </ul>
     </table>
 </body>
 </html>
