updated week8 project files

--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -47,12 +47,12 @@
         <tr>
             <td><li>Twitter</li></td>
             <td><a href="https://www.twitter.com/feudalerockband"/>
-            <img height="50px" width="50px" src="./Images/facebook_logo.png"/>
+            <img height="50px" width="50px" src="./Images/twitter_logo.png"/>
             </td>
         </tr>    
         <tr>
             <td><li>YouTube</li></td>
-            <td><a href="https://www.youtube.com/feudalerockband"/>
+            <td><a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ"/>
             <img height="50px" width="50px" src="./Images/youtube_logo.png"/>
             </td>
         </tr>
