updated week8 project files

--- a/Week8/W8 Project/about.html
+++ b/Week8/W8 Project/about.html
@@ -10,16 +10,15 @@
 <body>
     <h1>About Us</h1>
     <div id="box-model">
-        <a href="index.html">Home</a>
-        <a href="pictures.html">Pictures</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="index.html" style="text-decoration:none;">Home</a>
+        <a href="pictures.html" style="text-decoration:none;">Pictures</a>
+        <a href="contact.html" style="text-decoration:none;">Contact</a>
     </div>
     <br>
     <img height="500px" src="./Images/FEUDALE_edit2.png" alt="A picture of FEUDALE">
     <br>
     <h2>What's our story?</h2>
-    <div id="header" style="width:700px;">
-        <div id="centered" style="margin: 0 auto; width:500px;"></div>
+    <div class="div-2">
         <p><b>FEUDALE</b> has been rocking the Jersey Shore with their edgy mix of rock and blues since forming in 2005. The band of brothers is led by Bryan (Lead Guitar and Vocals), David (Bass and Vocals), and Michael (Drums) Feudale. The band’s eclectic musical influences range from The Beatles and Jimi Hendricks to the likes of Alice in Chains and David Bowie.
         The FEUDALE Brothers
         Based in Matawan, NJ, FEUDALE (formally known as Feudale Brothers Band) is a hard-rocking, blues inspired band, with a twist of alternative flare. What started as a part-time hobby for the band of brothers, eventually evolved into a full-time passion for writing, recording and playing varied styles of great music.</p>
