--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Contact Us</h1>
     <div id="box-model">
-        <a href="index.html">Home</a>
-        <a href="pictures.html">Pictures</a>
-        <a href="about.html">About us</a>
+        <a href="index.html" style="text-decoration:none;">Home</a>
+        <a href="pictures.html" style="text-decoration:none;">Pictures</a>
+        <a href="about.html" style="text-decoration:none;">About</a>
     </div>
     <br>
 
@@ -34,25 +34,25 @@
         <ul>
         <tr>
             <td><li>Facebook</li></td>
-            <td><a href="https://www.facebook.com/feudalerockband"/>
+            <td><a href="https://www.facebook.com/feudalerockband" title="Visit our Facebook!"/>
             <img height="50px" width="50px" src="./Images/facebook_logo.png"/>
             </td>
         </tr>
         <tr>
             <td><li>Instagram</li></td>
-            <td><a href="https://www.instagram.com/feudalerockband"/>
+            <td><a href="https://www.instagram.com/feudalerockband" title="Visit our Instagram!"/>
             <img height="50px" width="50px" src="./Images/instagram_logo.png"/>
             </td>
         </tr>
         <tr>
             <td><li>Twitter</li></td>
-            <td><a href="https://www.twitter.com/feudalerockband"/>
+            <td><a href="https://www.twitter.com/feudalerockband" title="Visit our Twitter!"/>
             <img height="50px" width="50px" src="./Images/twitter_logo.png"/>
             </td>
         </tr>    
         <tr>
             <td><li>YouTube</li></td>
-            <td><a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ"/>
+            <td><a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" title="Visit our YouTube!"/>
             <img height="50px" width="50px" src="./Images/youtube_logo.png"/>
             </td>
         </tr>
