updated week8 homepage

--- a/Week8/W8 Project/index.html
+++ b/Week8/W8 Project/index.html
@@ -19,7 +19,7 @@
     <br>
     <div class="div-2"> 
     <p class="shadow-text"><b>EXPERIENCE FEUDALE</p><br>
-    <p id="large-paragraph">FEUDALE is a hard-rocking, blues inspired band, with a twist of alternative flare.</b></p>
+    <p id="large-paragraph">NEW JERSEY'S hard-rocking, blues inspired band, with a twist of alternative flare.</b></p>
     <br>
     <img height="600px" width="750px" src="./Images/Feudale-3.png" alt="Feudale Stick-figures">
     </div>
