--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Contact Us</h1>
     <div id="box-model">
-        <a href="index.html" style="text-decoration:none;">Home</a>
-        <a href="pictures.html" style="text-decoration:none;">Pictures</a>
-        <a href="about.html" style="text-decoration:none;">About</a>
+        <a href="index.html">Home</a>
+        <a href="pictures.html">Pictures</a>
+        <a href="about.html">About</a>
     </div>
     <br>
 
