--- a/Week8/W8 Project/index.html
+++ b/Week8/W8 Project/index.html
@@ -11,10 +11,10 @@
     <h1>Home</h1>
 
     <div id="box-model">
-        <a href="index.html" style="text-decoration:none;">Home</a>
-        <a href="pictures.html" style="text-decoration:none;">Pictures</a>
-        <a href="about.html" style="text-decoration:none;">About</a>
-        <a href="contact.html" style="text-decoration:none;">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="pictures.html">Pictures</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </div>
     <br>
     <div class="div-2"> 
