--- a/Week8/W8 Project/pictures.html
+++ b/Week8/W8 Project/pictures.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Pictures</h1>
     <div id="box-model">
-        <a href="index.html" style="text-decoration:none;">Home</a>
-        <a href="about.html" style="text-decoration:none;">About</a>
-        <a href="contact.html" style="text-decoration:none;">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </div>
     <br>
     <img height="500" width="600" src="./Images/EPK1.jpg"/><br> <!--This is a relative path-->
