--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -35,25 +35,25 @@
         <tr>
             <td><li>Facebook</li></td>
             <td><a href="https://www.facebook.com/feudalerockband" title="Visit our Facebook!"/>
-            <img height="50px" width="50px" src="./Images/facebook_logo.png"/>
+            <img height="50px" width="50px" src="./Images/facebook_logo.png" alt="Facebook Logo"/>
             </td>
         </tr>
         <tr>
             <td><li>Instagram</li></td>
             <td><a href="https://www.instagram.com/feudalerockband" title="Visit our Instagram!"/>
-            <img height="50px" width="50px" src="./Images/instagram_logo.png"/>
+            <img height="50px" width="50px" src="./Images/instagram_logo.png" alt="Instagram Logo"/>
             </td>
         </tr>
         <tr>
             <td><li>Twitter</li></td>
             <td><a href="https://www.twitter.com/feudalerockband" title="Visit our Twitter!"/>
-            <img height="50px" width="50px" src="./Images/twitter_logo.png"/>
+            <img height="50px" width="50px" src="./Images/twitter_logo.png" alt="Twitter Logo"/>
             </td>
         </tr>    
         <tr>
             <td><li>YouTube</li></td>
             <td><a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" title="Visit our YouTube!"/>
-            <img height="50px" width="50px" src="./Images/youtube_logo.png"/>
+            <img height="50px" width="50px" src="./Images/youtube_logo.png" alt="YouTube Logo"/>
             </td>
         </tr>
         </ul>
