--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -26,7 +26,7 @@
         <input type="submit" value="Submit"><br>
     </form>
     <br>
-    <table class="table">
+    <table class="table1">
         <tr>
             <th>Website</th>
             <th>Link</th>
