updated week8 files

--- a/Week8/W8 Project/pictures.html
+++ b/Week8/W8 Project/pictures.html
@@ -15,8 +15,30 @@
         <a href="contact.html">Contact</a>
     </div>
     <br>
-    <img height="500" width="600" src="./Images/EPK1.jpg"/><br> <!--This is a relative path-->
-    <img height="500" width="600" src="https://storage.googleapis.com/wzukusers/user-34854977/images/5ceb7c1d80eeaKM3iEdm/aDSC_3192.jpg"/> <!--This is an absolute path-->
+
+    <div class="gallery">
+
+        <figure class="gallery__item gallery__item--1">
+            <img src="./Images/EPK1.jpg" class="gallery__img" alt="Photo of FEUDALE"/> <!--This is a relative path-->
+        </figure>
+
+        <figure class="gallery__item gallery__item--2">
+            <img src="https://storage.googleapis.com/wzukusers/user-34854977/images/5ceb7c1d80eeaKM3iEdm/aDSC_3192.jpg" class="gallery__img" alt="Photo of Bassist"/> <!--This is an absolute path-->
+        </figure>
+
+        <figure class="gallery__item gallery__item--3">
+            <img src="./Images/BRY.jpg" class="gallery__img" alt="Photo of Guitarist">
+        </figure>
+
+        <figure class="gallery__item gallery__item--4">
+            <img src="./Images/MIKE.jpg" class="gallery__img" alt="Photo of Drummer">
+        </figure>
+
+        <figure class="gallery__item gallery__item--5">
+            <img src="./Images/EPK2.jpg" class="gallery__img" alt="Photo of FEUDALE">
+        </figure>
+
+    </div>
 
     <div class="div3"><p>Find us on social media</p></div>
 
