updated week8 project files

--- a/Week8/W8 Project/pictures.html
+++ b/Week8/W8 Project/pictures.html
@@ -38,6 +38,10 @@
             <img src="./Images/EPK2.jpg" class="gallery__img" alt="Photo of FEUDALE">
         </figure>
 
+        <figure class="gallery__item gallery__item--6">
+            <img src="./Images/DAVE.jpg" class="gallery__img" alt="Photo of Bassist">
+        </figure>
+
     </div>
 
     <div class="div3"><p>Find us on social media</p></div>
