--- a/Week8/W8 Project/contact.html
+++ b/Week8/W8 Project/contact.html
@@ -16,14 +16,17 @@
     </div>
     <br>
 
-    <form>
+    <form action="mailto:info@feudalerockband.com" 
+    method="POST"
+    enctype="multipart/form-data"
+    name="EmailForm">
         <h2>Shoot us a message!</h2>
         <input type="text" name="firstName" placeholder="First Name"><br>
         <input type="text" name="lastName" placeholder="Last Name"><br>
         <input type="text" name="phoneNumber" placeholder="Phone Number"><br>
         <input type="text" name="email" placeholder="Email Address"><br>
         <input type="text" name="message" placeholder="Your Message"><br><br>
-        <button type="button">Submit</button><br>
+        <button type="submit" value="submit">Submit</button><br>
     </form>
     <br>
     <div class="div3"><p>Find us on social media</p></div>
