updated links in all html docs

--- a/Week8/W8 Project/index.html
+++ b/Week8/W8 Project/index.html
@@ -11,10 +11,10 @@
     <h1>Home</h1>
 
     <div id="box-model">
-        <a href="index.html">Home</a>
-        <a href="pictures.html">Pictures</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a class="visited" href="index.html">Home</a>
+        <a class="visited" href="pictures.html">Pictures</a>
+        <a class="visited" href="about.html">About</a>
+        <a class="visited" href="contact.html">Contact</a>
     </div>
     <br>
     <div class="div"> 
