--- a/Week8/W8 Project/pictures.html
+++ b/Week8/W8 Project/pictures.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Pictures</h1>
     <div id="box-model">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a class="visited" href="index.html">Home</a>
+        <a class="visited" href="about.html">About</a>
+        <a class="visited" href="contact.html">Contact</a>
     </div>
     <br>
 
