--- a/Week8/W8 Project/about.html
+++ b/Week8/W8 Project/about.html
@@ -10,9 +10,9 @@
 <body>
     <h1>About Us</h1>
     <div id="box-model">
-        <a href="index.html">Home</a>
-        <a href="pictures.html">Pictures</a>
-        <a href="contact.html">Contact</a>
+        <a class="visited" href="index.html">Home</a>
+        <a class="visited" href="pictures.html">Pictures</a>
+        <a class="visited" href="contact.html">Contact</a>
     </div>
     <br>
     <img height="500px" src="./Images/FEUDALE_edit2.png" alt="A picture of FEUDALE">
