--- a/week9/W9 Project/about.html
+++ b/week9/W9 Project/about.html
@@ -15,7 +15,10 @@
         <a class="visited" href="contact.html">Contact</a>
     </div>
     <br>
-    <img height="500px" src="./Images/FEUDALE_edit2.png" alt="A picture of FEUDALE">
+    <br>
+    <div class="div2">
+    <img height="500px" src="./Images/FEUDALE_edit2.png" alt="A picture of FEUDALE" style="border: 1px solid white;">
+    </div>
     <br>
     <h2>What's our story?</h2>
     <div class="div">
