updated css stylesheet

--- a/week9/W9 Project/about.html
+++ b/week9/W9 Project/about.html
@@ -17,7 +17,7 @@
     <br>
     <br>
     <div class="div2">
-    <img height="500px" src="./Images/FEUDALE_edit2.png" alt="A picture of FEUDALE" style="border: 1px solid white;">
+    <img height="500px" src="./Images/FEUDALE_edit2.png" alt="A picture of FEUDALE">
     </div>
     <br>
     <h2>What's our story?</h2>
