updated css stylesheet

--- a/week9/W9 Project/index.html
+++ b/week9/W9 Project/index.html
@@ -21,7 +21,7 @@
     <p class="shadow-text"><b>EXPERIENCE FEUDALE</p><br>
     <p id="large-paragraph">NEW JERSEY'S hard-rocking, blues inspired band, with a twist of alternative flare.</b></p>
     <br>
-    <img height="600px" width="750px" src="./Images/Feudale-3.png" alt="Feudale Stick-figures">
+    <img class="img2" height="600px" width="750px" src="./Images/Feudale-3.png" alt="Feudale Stick-figures">
     </div>
     <br>
 
