--- a/week9/index.html
+++ b/week9/index.html
@@ -4,107 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 9</title>
+    <title>Navbar Video</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <style>
-        div {
-            border-style: solid;
-            border-color: black;
-            /* padding: 5px;
-            margin: 5px; */
-        }
-    </style>
 </head>
 <body class="container">
-
-    <div class="alert alert-primary" role="alert"> Primary </div>
-    <div class="alert alert-secondary" role="alert"> Secondary </div>
-    <div class="alert alert-success" role="alert"> Success! </div>
-    <div class="alert alert-danger" role="alert"> Danger!!! </div>
-    <div class="alert alert-warning" role="alert"> This is a warning. </div>
-
-    <!-- This container will only span according to the set margins: -->
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                Content
-            </div>
-            <div class="col-lg-4">
-                Content
-            </div>
-            <div class="col-lg-2">
-                Content
-            </div>
-        </div>
-    </div>
-
-    <!-- Container fluid spans the entire width of the page: -->
-
-    <div class="container-fluid"> 
-        <div class="row">
-            <div class="col-sm">
-                Content
-            </div>
-            <div class="col-sm">
-                Content
-            </div>
-            <div class="col-sm">
-                <div class="row">
-                    <div class="col-md-8">
-                        Here's my 8
-                    </div>
-                    <div class="col-md-4">
-                        Here's my 4
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <button class="btn btn-primary"> Primary Button</button>
-    <button class="btn btn-secondary"> Secondary Button</button>
-    <button class="btn btn-success"> Success Button</button>
-    <button class="btn btn-danger"> Danger Button</button>
-    <button class="btn btn-warning"> Warning Button</button>
-    <button class="btn btn-info"> Info Button</button>
-    <button class="btn btn-light"> Light Button</button>
-    <button class="btn btn-dark"> Dark Button</button>
-    <button type="button" class="btn btn-link"> Link </button>
-    <br><br>
-
-    <button class="btn btn-info">
-        Notifications <span class="badge badge-secondary">5</span>
-
-    </button>
-
-    <h3> Invite Friends <span class="badge badge-primary">NEW</span></h3>
-
-    <table class="table table-dark table-hover">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Email</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Sam</td>
-            <td>sam@gmail.com</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Tom</td>
-            <td>tom@gmail.com</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Sally</td>
-            <td>sally@gmail.com</td>
-        </tr>
-    </table>
-
+    
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-
+    
 </body>
 </html>
