--- a/week9/W9-videos.html
+++ b/week9/W9-videos.html
@@ -17,8 +17,8 @@
 </head>
 <body class="container">
 
-    <!-- To utilize bootstrap on a given element, you need to assign a class and then call which function you want to use.
-    In the following example, we are utilizing the alert functionality built into bootstrap: -->
+    <!-- To utilize bootstrap on a given element, you need to assign a class and then call which component you want to use.
+    In the following example, we are utilizing the alert components built into bootstrap: -->
 
     <div class="alert alert-primary" role="alert"> Primary </div>
     <div class="alert alert-secondary" role="alert"> Secondary </div>
