moved files around

--- a/week9/W9-videos.html
+++ b/week9/W9-videos.html
@@ -28,7 +28,7 @@
 
     <!-- This container will only span according to the set margins: -->
     <!-- Notice how the classes have numbers after them (ex: col-lg-6 tells you that a box with a margin of 6 will be displayed). -->
-    <!-- Please note, containers range from a value of 1-12 with 1 being the smallest and 12 being the largest. -->
+    <!-- Please note, containers range from a value of 1-12 columns in a row with 1 being the smallest and 12 being the largest. -->
 
     <div class="container">
         <div class="row">
