--- a/Projects/FEUDALE/index.html
+++ b/Projects/FEUDALE/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FEUDALE</title>
     <link rel="stylesheet" href="styles.css"> <!--This is an external css link to a style sheet-->
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css"> -->
 </head>
 <body>
 
