updated contact page

--- a/week9/W9-Project/contact.html
+++ b/week9/W9-Project/contact.html
@@ -35,6 +35,8 @@
     
     <h1>Send inquiries below</h1>
 
+    <br>
+
     <form>
         <div class="col-3">
         <div class="input-text">
@@ -51,8 +53,8 @@
           <div id="emailHelp" class="form-text">We will never share your email, your privacy matters to us!</div>
         </div>
         <div class="mb-3">
-          <label for="Message" class="form-label">Your Message</label>
-          <input type="text" class="form-control" id="Message">
+            <label for="floatingTextarea2">Message</label>
+            <textarea class="form-control" placeholder="Your message" id="floatingTextarea2" style="height: 100px"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
