--- a/week9/W9-Project/contact.html
+++ b/week9/W9-Project/contact.html
@@ -38,19 +38,22 @@
 
     <br>
 
-    <form>
+    <form action="mailto:info@feudalerockband.com" 
+    method="POST"
+    enctype="multipart/form-data"
+    name="EmailForm">
         <div class="col-3">
         <div class="input-text">
             <div class="div3">
             <span class="input-text">First Name</span>
+            </div>
             <input type="text" aria-label="First name" class="form-control">
             </div>
-        </div>
         <div class="input-text">
             <div class="div3">
             <span class="input-text">Last Name</span>
-            <input type="text" aria-label="Last name" class="form-control">
             </div>
+            <input type="text" aria-label="Last name" class="form-control">
         </div>
         <div class="mb-3">
             <div class="div3">
