--- a/week9/W9-Project/index.html
+++ b/week9/W9-Project/index.html
@@ -82,27 +82,23 @@
       <table class="table table-dark table-hover table-sm table-bordered">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
             <th scope="col">Instrument</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
             <td>Bryan</td>
-            <td>FEUDALE</td>
+            <td>Feudale</td>
             <td>Guitarist/Vocals</td>
           </tr>
           <tr>
-            <th scope="row">2</th>
             <td>David</td>
             <td>Feudale</td>
             <td>Bassist/Vocals</td>
           </tr>
           <tr>
-            <th scope="row">3</th>
             <td>Michael</td>
             <td>Feudale</td>
             <td>Drums</td>
