--- a/week9/W9-Project/contact.html
+++ b/week9/W9-Project/contact.html
@@ -68,7 +68,9 @@
             </div>
             <textarea class="form-control" placeholder="Your message" id="floatingTextarea2" style="height: 100px"></textarea>
         </div>
+        <div class="div3">
         <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
       </form>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
