--- a/week9/W9-Project/contact.html
+++ b/week9/W9-Project/contact.html
@@ -66,7 +66,7 @@
             <div class="div3">
             <label for="floatingTextarea2">Message</label>
             </div>
-            <textarea class="form-control" placeholder="Your message" id="floatingTextarea2" style="height: 100px"></textarea>
+            <textarea class="form-control" placeholder="Your message" id="floatingTextarea2" rows="3"></textarea>
         </div>
         <div class="div3">
         <button type="submit" class="btn btn-primary">Submit</button>
