--- a/week9/W9-Project/index.html
+++ b/week9/W9-Project/index.html
@@ -23,8 +23,12 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="pictures.html">Pictures</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
+            </li>
             </ul>
             <span class="navbar-text">
               <b>NEW JERSEY PREMIERE ROCK BAND</b>
@@ -37,7 +41,7 @@
       <p>
         <h2>EXPERIENCE FEUDALE</h2>
         <br><br>
-        <h3><b>FEUDALE</b> is a hard-rocking, blues inspired band, with a twist of alternative flare.</h3>
+        <h4><b>FEUDALE</b> is a hard-rocking, blues inspired band, with a twist of alternative flare.</h4>
       </p>
       </div>
 
@@ -58,6 +62,11 @@
               “<i>It’s Alright</i>” is the follow up single to their latest track “Teenager” and this new single is sure to pump up fans far and wide! With its electrifying riff, fierce drums and sing out loud chorus it will have you shouting at the top of your lungs “HEY-NA-HEY-NA”! You’ll be rocking out and jumping around to its ferocious, melodic beats all while cleaning the house (‘cause we’re all still doing that, right?!).
               <br><br>
               FEUDALE is part of TLG Entertainment and distributes via INgrooves.</p>
+              <div class="col-12">
+                <div class="div4">
+                <img src="./Images/Feudale-3.png" class="rounded mx-auto d-block img-thumbnail" alt="FEUDALE LOGO">
+                </div>
+              </div>
           </div>
             </div>
           <div class="col">
@@ -72,39 +81,6 @@
       </div>
       
       <br>
-
-      <div class="mx-auto" style="width: 500px;">
-        <img src="Feudale-3.png" class="rounded mx-auto d-block img-thumbnail" alt="FEUDALE LOGO">
-      </div>
-
-      <br>
-
-      <table class="table table-dark table-hover table-sm table-bordered">
-        <thead>
-          <tr>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Instrument</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Bryan</td>
-            <td>Feudale</td>
-            <td>Guitarist/Vocals</td>
-          </tr>
-          <tr>
-            <td>David</td>
-            <td>Feudale</td>
-            <td>Bassist/Vocals</td>
-          </tr>
-          <tr>
-            <td>Michael</td>
-            <td>Feudale</td>
-            <td>Drums</td>
-          </tr>
-        </tbody>
-      </table>
       
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
