--- a/week9/W9-Project/index.html
+++ b/week9/W9-Project/index.html
@@ -31,7 +31,7 @@
             </li>
             </ul>
             <span class="navbar-text">
-              <b>NEW JERSEY PREMIERE ROCK BAND</b>
+              <b>NEW JERSEY'S PREMIERE ROCK BAND</b>
             </span>
           </div>
         </div>
