--- a/week9/W9-Project/pictures.html
+++ b/week9/W9-Project/pictures.html
@@ -30,7 +30,7 @@
             </li>
             </ul>
             <span class="navbar-text">
-              <b>NEW JERSEY PREMIERE ROCK BAND</b>
+              <b>NEW JERSEY'S PREMIERE ROCK BAND</b>
             </span>
           </div>
         </div>
@@ -57,22 +57,22 @@
             <img src="./Images/Feudale-3.png" class="d-block w-100" alt="FEUDALE LOGO">
           </div>
           <div class="carousel-item">
-            <img src="./Images/DAVE.jpg" class="d-block w-100" alt="...">
+            <img src="./Images/DAVE.jpg" class="rounded d-block w-100" alt="PHOTO OF DAVE">
           </div>
           <div class="carousel-item">
-            <img src="./Images/BRY.jpg" class="d-block w-100" alt="...">
+            <img src="./Images/BRY.jpg" class="rounded d-block w-100" alt="PHOTO OF BRY">
           </div>
           <div class="carousel-item">
-            <img src="./Images/MIKE.jpg" class="d-block w-100" alt="...">
+            <img src="./Images/MIKE.jpg" class="rounded d-block w-100" alt="PHOTO OF MIKE">
           </div>
           <div class="carousel-item">
-            <img src="./Images/EPK1.jpg" class="d-block w-100" alt="...">
+            <img src="./Images/EPK1.jpg" class="rounded d-block w-100" alt="PHOTO OF BAND">
           </div>
           <div class="carousel-item">
-            <img src="./Images/EPK2.jpg" class="d-block w-100" alt="...">
+            <img src="./Images/EPK2.jpg" class="rounded d-block w-100" alt="PHOTO OF BAND">
           </div>
           <div class="carousel-item">
-            <img src="./Images/FEUDALE_edit2.png" class="d-block w-100" alt="...">
+            <img src="./Images/FEUDALE_edit2.png" class="rounded d-block w-100" alt="PHOTO OF BAND">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
