--- a/week9/W9-Project/index.html
+++ b/week9/W9-Project/index.html
@@ -62,21 +62,19 @@
               “<i>It’s Alright</i>” is the follow up single to their latest track “Teenager” and this new single is sure to pump up fans far and wide! With its electrifying riff, fierce drums and sing out loud chorus it will have you shouting at the top of your lungs “HEY-NA-HEY-NA”! You’ll be rocking out and jumping around to its ferocious, melodic beats all while cleaning the house (‘cause we’re all still doing that, right?!).
               <br><br>
               FEUDALE is part of TLG Entertainment and distributes via INgrooves.</p>
-              <div class="col-12">
-                <div class="div4">
-                <img src="./Images/Feudale-3.png" class="rounded mx-auto d-block img-thumbnail" alt="FEUDALE LOGO">
-                </div>
-              </div>
-          </div>
             </div>
+          </div>
           <div class="col">
             <div class="div2">
             <b><h2>About</h2></b>
             <p><b>FEUDALE</b> has been rocking the Jersey Shore with their edgy mix of rock and blues since forming in 2005. The band of brothers is led by Bryan (Lead Guitar and Vocals), David (Bass and Vocals), and Michael (Drums) Feudale. The band’s eclectic musical influences range from The Beatles and Jimi Hendricks to the likes of Alice in Chains and David Bowie.
               The FEUDALE Brothers
               Based in Matawan, NJ, FEUDALE (formally known as Feudale Brothers Band) is a hard-rocking, blues inspired band, with a twist of alternative flare. What started as a part-time hobby for the band of brothers, eventually evolved into a full-time passion for writing, recording and playing varied styles of great music.</p>
-          </div>
             </div>
+          </div>
+          <div class="row">
+            <img src="./Images/Feudale-3.png" class="rounded mx-auto d-block w-50" alt="FEUDALE LOGO">
+          </div>
         </div>
       </div>
       
